--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e1a7c5448b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/6632f5c714.js" crossorigin="anonymous"></script>
+    
 
 </head>
 <body>
@@ -33,6 +34,27 @@
                 <button>Upcomming Matches</button>
                 <button>Upcomming Matches</button>
             </div>
+            <div class="all-blogs">
+                <div class="blog">
+                    <img src="./assets/Blog Image.png" alt="" src./assets/Blog="" Image.png="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                    <button><img src="./assets/Time Icon.png" alt="">10h</button>
+                </div>    
+                <div class="blog">
+                    <img src="./assets/Blog Image.png" alt="" src./assets/Blog="" Image.png="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                    <button><img src="./assets/Time Icon.png" alt="">10h</button>
+                </div>    
+                <div class="blog">
+                    <img src="./assets/Blog Image.png" alt="" src./assets/Blog="" Image.png="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                    <button><img src="./assets/Time Icon.png" alt="">10h</button>
+                </div>
+            </div>
+            
         </div>
     </div>
 </body>
