--- a/index.html
+++ b/index.html
@@ -27,34 +27,170 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="sec-container">
         <div class="blogs">
-            <div class="indicator">
-                <button>Upcomming Matches</button>
-                <button>Upcomming Matches</button>
-                <button>Upcomming Matches</button>
+            <div class="category">
+                <div class="indicator">
+                    <button class="btn">Upcomming Matches</button>
+                    <button class="btn">All Group</button>
+                    <button class="btn btn1">Blogs</button>
+                </div>
             </div>
             <div class="all-blogs">
                 <div class="blog">
-                    <img src="./assets/Blog Image.png" alt="" src./assets/Blog="" Image.png="">
-                    <button>Transfer</button>
-                    <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                    <button><img src="./assets/Time Icon.png" alt="">10h</button>
+                    <img src="./assets/Blog Image.png" alt="">
+                    <div class="data">
+                        <button>Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="meta">
+                            <div class="time">
+                                <img src="./assets/Time Icon.png" alt="">
+                                <span>10h</span>
+                            </div>
+                            <div class="cmnt">
+                                <img src="./assets/Chat Icon.png" alt="">
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>    
                 <div class="blog">
-                    <img src="./assets/Blog Image.png" alt="" src./assets/Blog="" Image.png="">
-                    <button>Transfer</button>
-                    <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                    <button><img src="./assets/Time Icon.png" alt="">10h</button>
+                    <img src="./assets/Blog Image.png" alt="">
+                    <div class="data">
+                        <button>Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="meta">
+                            <div class="time">
+                                <img src="./assets/Time Icon.png" alt="">
+                                <span>10h</span>
+                            </div>
+                            <div class="cmnt">
+                                <img src="./assets/Chat Icon.png" alt="">
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>    
                 <div class="blog">
-                    <img src="./assets/Blog Image.png" alt="" src./assets/Blog="" Image.png="">
-                    <button>Transfer</button>
-                    <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                    <button><img src="./assets/Time Icon.png" alt="">10h</button>
+                    <img src="./assets/Blog Image.png" alt="">
+                    <div class="data">
+                        <button>Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="meta">
+                            <div class="time">
+                                <img src="./assets/Time Icon.png" alt="">
+                                <span>10h</span>
+                            </div>
+                            <div class="cmnt">
+                                <img src="./assets/Chat Icon.png" alt="">
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="./assets/Blog Image.png" alt="">
+                    <div class="data">
+                        <button>Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="meta">
+                            <div class="time">
+                                <img src="./assets/Time Icon.png" alt="">
+                                <span>10h</span>
+                            </div>
+                            <div class="cmnt">
+                                <img src="./assets/Chat Icon.png" alt="">
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="./assets/Blog Image.png" alt="">
+                    <div class="data">
+                        <button>Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="meta">
+                            <div class="time">
+                                <img src="./assets/Time Icon.png" alt="">
+                                <span>10h</span>
+                            </div>
+                            <div class="cmnt">
+                                <img src="./assets/Chat Icon.png" alt="">
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="./assets/Blog Image.png" alt="">
+                    <div class="data">
+                        <button>Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="meta">
+                            <div class="time">
+                                <img src="./assets/Time Icon.png" alt="">
+                                <span>10h</span>
+                            </div>
+                            <div class="cmnt">
+                                <img src="./assets/Chat Icon.png" alt="">
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="./assets/Blog Image.png" alt="">
+                    <div class="data">
+                        <button>Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="meta">
+                            <div class="time">
+                                <img src="./assets/Time Icon.png" alt="">
+                                <span>10h</span>
+                            </div>
+                            <div class="cmnt">
+                                <img src="./assets/Chat Icon.png" alt="">
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="./assets/Blog Image.png" alt="">
+                    <div class="data">
+                        <button>Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="meta">
+                            <div class="time">
+                                <img src="./assets/Time Icon.png" alt="">
+                                <span>10h</span>
+                            </div>
+                            <div class="cmnt">
+                                <img src="./assets/Chat Icon.png" alt="">
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="./assets/Blog Image.png" alt="">
+                    <div class="data">
+                        <button>Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="meta">
+                            <div class="time">
+                                <img src="./assets/Time Icon.png" alt="">
+                                <span>10h</span>
+                            </div>
+                            <div class="cmnt">
+                                <img src="./assets/Chat Icon.png" alt="">
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            
         </div>
     </div>
 </body>
