Blog section responsive done

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
             </div>
         </div>
     </div>
+    <!-- Hero section END -->
+    <!-- Blog section start -->
     <div class="sec-container">
         <div class="blogs">
             <div class="category">
                 <div class="indicator">
-                    <button class="btn">Upcomming Matches</button>
-                    <button class="btn">All Group</button>
-                    <button class="btn btn1">Blogs</button>
+                    <button class="btn blog-btn">Upcomming Matches</button>
+                    <button class="btn blog-btn">All Group</button>
+                    <button class="btn btn1 blog-btn">Blogs</button>
                 </div>
             </div>
             <div class="all-blogs">
@@ -139,59 +141,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="blog">
-                    <img src="./assets/Blog Image.png" alt="">
-                    <div class="data">
-                        <button>Transfer</button>
-                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                        <div class="meta">
-                            <div class="time">
-                                <img src="./assets/Time Icon.png" alt="">
-                                <span>10h</span>
-                            </div>
-                            <div class="cmnt">
-                                <img src="./assets/Chat Icon.png" alt="">
-                                <span>23</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="blog">
-                    <img src="./assets/Blog Image.png" alt="">
-                    <div class="data">
-                        <button>Transfer</button>
-                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                        <div class="meta">
-                            <div class="time">
-                                <img src="./assets/Time Icon.png" alt="">
-                                <span>10h</span>
-                            </div>
-                            <div class="cmnt">
-                                <img src="./assets/Chat Icon.png" alt="">
-                                <span>23</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="blog">
-                    <img src="./assets/Blog Image.png" alt="">
-                    <div class="data">
-                        <button>Transfer</button>
-                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                        <div class="meta">
-                            <div class="time">
-                                <img src="./assets/Time Icon.png" alt="">
-                                <span>10h</span>
-                            </div>
-                            <div class="cmnt">
-                                <img src="./assets/Chat Icon.png" alt="">
-                                <span>23</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
+    <!-- Blog section END -->
 </body>
 </html>
