--- a/index.html
+++ b/index.html
@@ -146,4 +146,20 @@
     </div>
     <!-- Blog section END -->
 </body>
+<footer>
+    <div class="footer">
+        <div class="logo">
+            <h2>Goal</h2>
+            <hr>
+        </div>
+        <div class="item">
+            <a href="">Contact Us</a>
+            <a href="">Terms of Service</a>
+            <a href="">Privacy Policy</a>
+            <a href="">About Us</a>
+            <a href="">Goal App</a>
+            <a href="">Goal Live</a>
+        </div>
+    </div>
+</footer>
 </html>
