--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     </div>
     <!-- Blog section END -->
 </body>
+<!-- Footer START -->
 <footer>
     <div class="footer">
         <div class="logo">
@@ -162,4 +163,5 @@
         </div>
     </div>
 </footer>
+<!-- Footer END -->
 </html>
