--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="blogs">
             <div class="category">
                 <div class="indicator">
-                    <button class="btn blog-btn">Upcomming Matches</button>
+                    <button class="btn blog-btn"><a href="match.html" target="_blank"></a>Upcomming Matches</button>
                     <button class="btn blog-btn">All Group</button>
                     <button class="btn btn1 blog-btn">Blogs</button>
                 </div>
