--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="info">
                 <h2>The Greatest show on the earth</h2>
                 <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                <button class="btn btn1">Watch Live<i class="fa-solid fa-angle-right"></i></button>
+                <button class="btn btn1"><a class="live" href="match.html" target="_blank">Watch Live</a><i class="fa-solid fa-angle-right"></i></button>
             </div>
             <div class="show">
                 <img src="./assets/banner.png" alt="Banner Image">
@@ -32,7 +32,7 @@
         <div class="blogs">
             <div class="category">
                 <div class="indicator">
-                    <button class="btn blog-btn"><a href="match.html" target="_blank"></a>Upcomming Matches</button>
+                    <button class="btn blog-btn">Upcomming Matches</button>
                     <button class="btn blog-btn">All Group</button>
                     <button class="btn btn1 blog-btn">Blogs</button>
                 </div>
