--- a/match.html
+++ b/match.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Cup</title>
+    <title>Upcomming Matches</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
             <div class="info">
                 <h2>The Greatest show on the earth</h2>
                 <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                <button class="btn btn1"><a class="live" href="index.html" target="_blank">Watch Live</a><i class="fa-solid fa-angle-right"></i></button>
+                <a class="live btn btn1" href="index.html" target="_blank">Watch Live<i class="fa-solid fa-angle-right"></i></a>
             </div>
             <div class="show">
                 <img src="./assets/banner.png" alt="Banner Image">
