--- a/match.html
+++ b/match.html
@@ -105,6 +105,7 @@
                     </div>
                 </div>
             </div>
+            <button class="hide">View All</button>
         </div>
     </div>
     <!-- Blog section END -->
@@ -123,6 +124,17 @@
             <a href="">About Us</a>
             <a href="">Goal App</a>
             <a href="">Goal Live</a>
+        </div>
+        <div class="social">
+            <a href="https://www.facebook.com/sadiknazrulsadik" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://twitter.com/sadik_nazrul" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-twitter-square"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/sadiknazrul/" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
         </div>
     </div>
 </footer>
